# PythonProjectTemplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
projectPackage/: pyproject.toml
