[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
projectpackage = {path = "projectPackage", develop = true}


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
autoflake = "^2.3.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
coverage = "^7.6.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
extend-exclude = '''
/(
  | migrations
)/
'''
